# Lexis

./: CHANGELOG.md  Lexis.cabal
src/: Lexis.hs
src/Lexis/Internal/: DFA.hs  Graph.hs  NFA.hs
